# diesel

./: README.md  diesel.ipynb  pyproject.toml  semanal-brasil-desde-2013.xlsx
